adding navbar details

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abuyako - Portfolio</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-   
+
+   <!-- NavBar -->
+   <div class="navbar">
+       <div class="navbar-logo">
+           <h1>ABUYAKO</h1>
+       </div>
+       <div class="navbar-list">
+           <ul>
+               <li><a href="#">Home</a></li>
+               <li><a href="#">About</a></li>
+               <li><a href="#">Skills</a></li>
+               <li><a href="#">Experience</a></li>
+               <li><a href="#">Pricing</a></li>
+               <li><a href="#">Contact</a></li>
+           </ul>
+       </div>
+   </div>
 </body>
 </html>
