adding the home dstails

--- a/index.html
+++ b/index.html
@@ -24,5 +24,20 @@
            </ul>
        </div>
    </div>
+
+   <!-- Home -->
+   <div class="home">
+       <div class="home-text">
+           <ul>
+               <li>Hello, I'm</li>
+               <li>Abubakary Kowero</li>
+               <li>abuyako@gmail.com</li>
+               <li>+255 752 080410</li>
+               <li>Dar es salaam, Tanzania</li>
+           </ul>
+           <div class="home-social"></div>
+       </div>
+       <div class="home-image"></div>
+   </div>
 </body>
 </html>
