--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
    <!-- Home -->
    <div class="home">
        <div class="home-text">
+           <h1>Hello, I'm</h1>
+           <p>Abubakary Kowero</p>
            <ul>
-               <li>Hello, I'm</li>
-               <li>Abubakary Kowero</li>
                <li>abuyako@gmail.com</li>
                <li>+255 752 080410</li>
                <li>Dar es salaam, Tanzania</li>
