linking the fonts

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
            <h1>Hello, I'm</h1>
            <p>Abubakary Kowero</p>
            <ul>
-               <li>abuyako@gmail.com</li>
+               <li><span><i class="fa fa-envelope"></i></span> abuyako@gmail.com</li>
                <li>+255 752 080410</li>
                <li>Dar es salaam, Tanzania</li>
            </ul>
