--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
            <h1>Hello, I'm</h1>
            <p>Abubakary Kowero</p>
            <ul>
-               <li><span><i class="fa fa-envelope"></i></span> abuyako@gmail.com</li>
-               <li>+255 752 080410</li>
-               <li>Dar es salaam, Tanzania</li>
+               <li></span><i class="fa fa-envelope"></i></span> abuyako@gmail.com</li>
+               <li><span><i class="fa fa-phone"></i></span></i> +255 752 080410</li>
+               <li><span><i class="fa fa-map-marker"></i></span> Dar es salaam, Tanzania</li>
            </ul>
            <div class="home-social"></div>
        </div>
