adding and stlying the icons

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,38 +8,45 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
 
-   <!-- NavBar -->
-   <div class="navbar">
-       <div class="navbar-logo">
-           <h1>ABUYAKO</h1>
-       </div>
-       <div class="navbar-list">
-           <ul>
-               <li><a href="#">Home</a></li>
-               <li><a href="#">About</a></li>
-               <li><a href="#">Skills</a></li>
-               <li><a href="#">Experience</a></li>
-               <li><a href="#">Pricing</a></li>
-               <li><a href="#">Contact</a></li>
-           </ul>
-       </div>
-   </div>
+    <!-- NavBar -->
+    <div class="navbar">
+        <div class="navbar-logo">
+            <h1>ABUYAKO</h1>
+        </div>
+        <div class="navbar-list">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Experience</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </div>
 
-   <!-- Home -->
-   <div class="home">
-       <div class="home-text">
-           <h1>Hello, I'm</h1>
-           <p>Abubakary Kowero</p>
-           <ul>
-               <li></span><i class="fa fa-envelope"></i></span> abuyako@gmail.com</li>
-               <li><span><i class="fa fa-phone"></i></span></i> +255 752 080410</li>
-               <li><span><i class="fa fa-map-marker"></i></span> Dar es salaam, Tanzania</li>
-           </ul>
-           <div class="home-social"></div>
-       </div>
-       <div class="home-image"></div>
-   </div>
+    <!-- Home -->
+    <div class="home">
+        <div class="home-text">
+            <h1>Hello, I'm</h1>
+            <p>Abubakary Kowero</p>
+            <ul>
+                <li></span><i class="fa fa-envelope"></i></span> abuyako@gmail.com</li>
+                <li><span><i class="fa fa-phone"></i></span></i> +255 752 080410</li>
+                <li><span><i class="fa fa-map-marker"></i></span> Dar es salaam, Tanzania</li>
+            </ul>
+            <div class="home-social">
+                </span><i class="fa fa-facebook"></i></span>
+                </span><i class="fa fa-instagram"></i></span>
+                </span><i class="fa fa-twitter"></i></span>
+                </span><i class="fa fa-github"></i></span>
+            </div>
+        </div>
+        <div class="home-image"></div>
+    </div>
 </body>
+
 </html>
