--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p>Abubakary Kowero</p>
             <ul>
                 <li></span><i class="fa fa-envelope"></i></span> abuyako@gmail.com</li>
-                <li><span><i class="fa fa-phone"></i></span></i> +255 752 080410</li>
+                <li><span><i class="fa fa-phone"></i></span></i> +255 752 080 410</li>
                 <li><span><i class="fa fa-map-marker"></i></span> Dar es salaam, Tanzania</li>
             </ul>
             <div class="home-social">
@@ -45,7 +45,11 @@
                 </span><i class="fa fa-github"></i></span>
             </div>
         </div>
-        <div class="home-image"></div>
+        <div class="home-image">
+            <svg height="100" width="100">
+                <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
+              </svg>
+        </div>
     </div>
 </body>
 
