--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             </div>
         </div>
         <div class="home-image">
-            <svg height="100" width="100">
-                <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
+            <svg height="400" width="100%">
+                <circle cx="340" cy="170" r="120" stroke="black" stroke-width="15" fill="red" />
               </svg>
         </div>
     </div>
