--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="home-image">
             <svg height="400" width="100%">
-                <circle cx="340" cy="170" r="120" stroke="black" stroke-width="15" fill="red" />
+                <circle cx="340" cy="200" r="150" stroke="grey" stroke-width="22" fill="red" />
               </svg>
         </div>
     </div>
