styling the home-images

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
             </div>
         </div>
         <div class="home-image">
-            <svg height="400" width="100%">
-                <circle cx="340" cy="200" r="150" stroke="grey" stroke-width="22" fill="red" />
-              </svg>
+              <img src="/assets/images/avatar.jpg" alt="jeshi" w100%;>
         </div>
     </div>
 </body>
