adding link to the icons

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
                 <li><span><i class="fa fa-map-marker"></i></span> Dar es salaam, Tanzania</li>
             </ul>
             <div class="home-social">
-                </span><i class="fa fa-facebook"></i></span>
-                </span><i class="fa fa-instagram"></i></span>
-                </span><i class="fa fa-twitter"></i></span>
-                </span><i class="fa fa-github"></i></span>
+                <a href="https://web.facebook.com/abubakary.kowero"><i class="fa fa-facebook"></i></a>
+                <a href="https://instagram.com/itsabuyako"><i class="fa fa-instagram"></i></a>
+                <a href="https://twitter.com/abuyako"><i class="fa fa-twitter"></i></a>
+                <a href="https://github.com/abuyako"><i class="fa fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/abubakary-kowero-6a8ba0104/"><i class="fa fa-linkedin"></i></a>
             </div>
         </div>
         <div class="home-image">
