--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="home-image">
-              <img src="/assets/images/avatar.jpg" alt="jeshi" w100%;>
+              <img src="/assets/images/pic.jpg" alt="jeshi" w100%;>
         </div>
     </div>
 </body>
