--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <div class="home-text">
             <h1>Hello, I'm</h1>
             <p>Abubakary Kowero</p>
+            <h3>Front-End Developer</h3>
             <ul>
                 <li></span><i class="fa fa-envelope"></i></span> abuyako@gmail.com</li>
                 <li><span><i class="fa fa-phone"></i></span></i> +255 752 080 410</li>
@@ -47,9 +48,12 @@
             </div>
         </div>
         <div class="home-image">
-              <img src="/assets/images/pic.jpg" alt="jeshi" w100%;>
+            <img src="/assets/images/pic.jpg" alt="jeshi" w100%;>
         </div>
     </div>
+
+
+
 </body>
 
 </html>
