adding about-text section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,23 @@
     </div>
 
     <!-- about -->
-    <div class="about"></div>
+    <div class="about">
+        <div class="about-picture">
+            <img src="/assets/images/programmer.svg" alt="programmer">
+        </div>
+        <div class="about-text">
+            <h1>About</h1>
+            <p>Hello, I'm Abuyako, Web Developer based on Dar es salaam. I have rich experience in web site design & building and customization. Also I am good at</p>
+
+            <ul>
+                <li>html</li>
+                <li>css</li>
+                <li>javascript</li>
+                <li>angular</li>
+                <li>sql</li>
+            </ul>
+        </div>
+    </div>
 
 </body>
 
