Styling the about section

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <!-- about -->
     <div class="about">
         <div class="about-picture">
-            <img src="/assets/images/programmer.svg" alt="programmer">
+            <img src="/assets/images/programmer.svg" width="100%" alt="programmer">
         </div>
         <div class="about-text">
-            <h1>About</h1>
+            <h1>About Me</h1>
             <p>Hello, I'm Abuyako, Web Developer based on Dar es salaam. I have rich experience in web site design & building and customization. Also I am good at</p>
 
             <ul>
