--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
                 <li>sql</li>
             </ul>
         </div>
+        
+        <div class="about-download">
+            <a href="/images/myw3schoolsimage.jpg" download>
+                <button class="btn"><i class="fa fa-download"></i> Download</button>
+              </a>
+        </div>
     </div>
 
 </body>
