styling and download link

--- a/index.html
+++ b/index.html
@@ -68,13 +68,15 @@
                 <li>angular</li>
                 <li>sql</li>
             </ul>
+
+            <div class="about-download">
+                <a href="/assets/file/cv.pdf" download>
+                    <button class="btn">Download CV <i class="fa fa-download"></i></button>
+                  </a>
+            </div>
         </div>
         
-        <div class="about-download">
-            <a href="/images/myw3schoolsimage.jpg" download>
-                <button class="btn"><i class="fa fa-download"></i> Download</button>
-              </a>
-        </div>
+       
     </div>
 
 </body>
