adding the what I do section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         </div>
         <div class="about-text">
             <h1>About Me</h1>
-            <p>Hello, I'm Abuyako, Web Developer based on Dar es salaam. I have rich experience in web site design & building and customization. Also I am good at</p>
+            <p>Hello, I'm Abuyako, Web Developer based on Dar es salaam. I have rich experience in web site design &
+                building and customization. Also I am good at</p>
 
             <ul>
                 <li>html</li>
@@ -72,11 +73,14 @@
             <div class="about-download">
                 <a href="/assets/file/cv.pdf" download>
                     <button class="btn">Download CV <i class="fa fa-download"></i></button>
-                  </a>
+                </a>
             </div>
         </div>
-        
-       
+    </div>
+
+    <!-- what I do  -->
+    <div class="do">
+        <div class="do-card"></div>
     </div>
 
 </body>
