adding the what I do section

--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@
 
     <!-- what I do  -->
     <div class="do">
-        <div class="do-card"></div>
+        <div class="do-card">
+            <div class="card card-01" ></div>
+            <div class="card card-02" ></div>
+            <div class="card card-03" ></div>
+        </div>
     </div>
 
 </body>
