--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- about -->
     <div class="about">
         <div class="about-picture">
-            <img src="/assets/images/programmer.svg" width="100%" alt="programmer">
+            <img src="/assets/images/red.svg" width="100%" alt="programmer">
         </div>
         <div class="about-text">
             <h1>About Me</h1>
