styling the cards

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 
     <!-- what I do  -->
     <div class="do">
+        <h1>What I Do</h1>
         <div class="do-card">
             <div class="card card-01" ></div>
             <div class="card card-02" ></div>
