adding card info

--- a/index.html
+++ b/index.html
@@ -82,9 +82,33 @@
     <div class="do">
         <h1>What I Do</h1>
         <div class="do-card">
-            <div class="card card-01" ></div>
-            <div class="card card-02" ></div>
-            <div class="card card-03" ></div>
+            <div class="card card-01" >
+                <i class="fa fa-crop"></i>         
+                <h1>UI Design</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                     Sed quibusdam magni maiores nostrum,
+                     ab quod pariatur, iure sequi iusto
+                      atque sunt laborum eligendi excepturi! Ratione repudiandae
+                     odit necessitatibus quidem pariatur.</p>
+            </div>
+            <div class="card card-02" >
+                <i class="fa fa-code"></i>
+                <h1>Web Development</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                     Sed quibusdam magni maiores nostrum,
+                     ab quod pariatur, iure sequi iusto
+                      atque sunt laborum eligendi excepturi! Ratione repudiandae
+                     odit necessitatibus quidem pariatur.</p>
+            </div>
+            <div class="card card-03" >
+                <i class="fa fa-object-ungroup"></i>
+                <h1>App Development</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                     Dicta facere exercitationem tempore a voluptatem
+                      ullam ratione similique labore quasi! Voluptatem 
+                    nihil ab totam explicabo 
+                    praesentium fuga doloremque, natus provident temporibus!</p>
+            </div>
         </div>
     </div>
 
