adding more info on the cards

--- a/index.html
+++ b/index.html
@@ -85,29 +85,20 @@
             <div class="card card-01" >
                 <i class="fa fa-crop"></i>         
                 <h1>UI Design</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                     Sed quibusdam magni maiores nostrum,
-                     ab quod pariatur, iure sequi iusto
-                      atque sunt laborum eligendi excepturi! Ratione repudiandae
-                     odit necessitatibus quidem pariatur.</p>
+                <p>I make interfaces in software or computerized devices with a focus on looks or style. 
+                    Designers aim to create designs users will find easy to use and pleasurable.</p>
             </div>
             <div class="card card-02" >
                 <i class="fa fa-code"></i>
                 <h1>Web Development</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                     Sed quibusdam magni maiores nostrum,
-                     ab quod pariatur, iure sequi iusto
-                      atque sunt laborum eligendi excepturi! Ratione repudiandae
-                     odit necessitatibus quidem pariatur.</p>
+                <p>I develop website for the Internet or an intranet. Web development can range from developing a simple single static page of
+                     plain text to complex web-based internet applications, electronic businesses, and social network services.</p>
             </div>
             <div class="card card-03" >
                 <i class="fa fa-object-ungroup"></i>
-                <h1>App Development</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                     Dicta facere exercitationem tempore a voluptatem
-                      ullam ratione similique labore quasi! Voluptatem 
-                    nihil ab totam explicabo 
-                    praesentium fuga doloremque, natus provident temporibus!</p>
+                <h1>Database Management</h1>
+                <p> I organize, store and retrieve data from a computer. Database Management can also describe, the data storage, operations and 
+                    security practices of a Database Administrator (DBA), throughout the life cycle of the data.</p>
             </div>
         </div>
     </div>
