adding skills section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Experience</a></li>
+                <li><a href="#">Work</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
@@ -103,6 +104,11 @@
         </div>
     </div>
 
+    <!-- skills  -->
+    <div class="skill">
+        <div class="skill-technical"></div>
+        <div class="skill-proffesional"></div>
+    </div>
 </body>
 
 </html>
