adding skill progrssive bar

--- a/index.html
+++ b/index.html
@@ -106,8 +106,38 @@
 
     <!-- skills  -->
     <div class="skill">
-        <div class="skill-technical"></div>
-        <div class="skill-proffesional"></div>
+        <div class="skill-technical">
+            <h1>Technical skills</h1>
+
+            <p>html</p>
+           <div class="myhtml">
+                <div class="html">20%</div>
+           </div>
+
+           <p>css</p>
+           <div class="mycss">
+                <div class="css">20%</div>
+           </div>
+
+           <p>javascript</p>
+           <div class="myjavascript">
+                <div class="javascript">20%</div>
+           </div>
+
+           <p>angular</p>
+           <div class="myangular">
+                <div class="angular">20%</div>
+           </div>
+
+           <p>sql</p>
+           <div class="mysql">
+                <div class="sql">20%</div>
+           </div>
+
+        </div>
+        <div class="skill-professional">
+            <h1>Professional Skills</h1>
+        </div>
     </div>
 </body>
 
