adding the professional skill section

--- a/index.html
+++ b/index.html
@@ -137,6 +137,26 @@
         </div>
         <div class="skill-professional">
             <h1>Professional Skills</h1>
+
+            <p>Communication</p>
+            <div class="mycomm">
+                <div class="comm">95%</div>
+            </div>
+
+            <p>Team Work</p>
+            <div class="mywork">
+                <div class="work">75%</div>
+            </div>
+
+            <p>Project Management</p>
+            <div class="mymanage">
+                <div class="manage">85%</div>
+            </div>
+
+            <p>Creativity</p>
+            <div class="mycreate">
+                <div class="create">95%</div>
+            </div>
         </div>
     </div>
 </body>
