adding the experience section

--- a/index.html
+++ b/index.html
@@ -83,22 +83,25 @@
     <div class="do">
         <h1>What I Do</h1>
         <div class="do-card">
-            <div class="card card-01" >
-                <i class="fa fa-crop"></i>         
+            <div class="card card-01">
+                <i class="fa fa-crop"></i>
                 <h1>UI Design</h1>
-                <p>I make interfaces in software or computerized devices with a focus on looks or style. 
+                <p>I make interfaces in software or computerized devices with a focus on looks or style.
                     Designers aim to create designs users will find easy to use and pleasurable.</p>
             </div>
-            <div class="card card-02" >
+            <div class="card card-02">
                 <i class="fa fa-code"></i>
                 <h1>Web Development</h1>
-                <p>I develop website for the Internet or an intranet. Web development can range from developing a simple single static page of
-                     plain text to complex web-based internet applications, electronic businesses, and social network services.</p>
+                <p>I develop website for the Internet or an intranet. Web development can range from developing a simple
+                    single static page of
+                    plain text to complex web-based internet applications, electronic businesses, and social network
+                    services.</p>
             </div>
-            <div class="card card-03" >
+            <div class="card card-03">
                 <i class="fa fa-object-ungroup"></i>
                 <h1>Database Management</h1>
-                <p> I organize, store and retrieve data from a computer. Database Management can also describe, the data storage, operations and 
+                <p> I organize, store and retrieve data from a computer. Database Management can also describe, the data
+                    storage, operations and
                     security practices of a Database Administrator (DBA), throughout the life cycle of the data.</p>
             </div>
         </div>
@@ -110,29 +113,29 @@
             <h1>Technical skills</h1>
 
             <p>html</p>
-           <div class="myhtml">
+            <div class="myhtml">
                 <div class="html">95%</div>
-           </div>
+            </div>
 
-           <p>css</p>
-           <div class="mycss">
+            <p>css</p>
+            <div class="mycss">
                 <div class="css">85%</div>
-           </div>
+            </div>
 
-           <p>javascript</p>
-           <div class="myjavascript">
+            <p>javascript</p>
+            <div class="myjavascript">
                 <div class="javascript">75%</div>
-           </div>
+            </div>
 
-           <p>angular</p>
-           <div class="myangular">
+            <p>angular</p>
+            <div class="myangular">
                 <div class="angular">45%</div>
-           </div>
+            </div>
 
-           <p>sql</p>
-           <div class="mysql">
+            <p>sql</p>
+            <div class="mysql">
                 <div class="sql">40%</div>
-           </div>
+            </div>
 
         </div>
         <div class="skill-professional">
@@ -159,6 +162,17 @@
             </div>
         </div>
     </div>
+
+    <!-- Experience  -->
+    <div class="experience">
+        <div class="experience-education">
+            <h1>Education</h1>
+        </div>
+        <div class="experience-work">
+            <h1>Experience Work</h1>
+        </div>
+    </div>
+
 </body>
 
 </html>
