--- a/index.html
+++ b/index.html
@@ -167,9 +167,17 @@
     <div class="experience">
         <div class="experience-education">
             <h1>Education</h1>
+
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
         </div>
         <div class="experience-work">
             <h1>Experience Work</h1>
+
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
         </div>
     </div>
 
