adding and styling card 01

--- a/index.html
+++ b/index.html
@@ -168,16 +168,21 @@
         <div class="experience-education">
             <h1>Education</h1>
 
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card card-01">
+                <h1>Advance Secondary School</h1>
+                <h2>Same Secondary School</h2>
+                <h3>Kilimanjaro - Same</h3>
+                <p>2012 - 2014</p>
+            </div>
+            <div class="card card-02"></div>
+            <div class="card card-03"></div>
         </div>
         <div class="experience-work">
             <h1>Experience Work</h1>
 
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card card-04"></div>
+            <div class="card card-05"></div>
+            <div class="card card-06"></div>
         </div>
     </div>
 
