adding and styling card 02

--- a/index.html
+++ b/index.html
@@ -174,7 +174,12 @@
                 <h3>Kilimanjaro - Same</h3>
                 <p>2012 - 2014</p>
             </div>
-            <div class="card card-02"></div>
+            <div class="card card-02">
+                <h1>University - Degree</h1>
+                <h2>University Of Dar Es Salaam</h2>
+                <h3>Dar Es Salaam - Tanzania</h3>
+                <p>2014 - 2017</p>
+            </div>
             <div class="card card-03"></div>
         </div>
         <div class="experience-work">
