--- a/index.html
+++ b/index.html
@@ -180,14 +180,14 @@
                 <h3>Dar Es Salaam - Tanzania</h3>
                 <p>2014 - 2017</p>
             </div>
-            <div class="card card-03"></div>
         </div>
         <div class="experience-work">
             <h1>Experience Work</h1>
 
             <div class="card card-04"></div>
             <div class="card card-05"></div>
-            <div class="card card-06"></div>
+            <!-- <div class="card card-06"></div>
+            <div class="card card-07"></div> -->
         </div>
     </div>
 
