adding card 05 info

--- a/index.html
+++ b/index.html
@@ -194,9 +194,17 @@
                 <h4><i class="fa fa-check-circle"></i> Project Management</h4>
               
             </div>
-            <div class="card card-05"></div>
-            <!-- <div class="card card-06"></div>
-            <div class="card card-07"></div> -->
+            <div class="card card-05">
+                <h1>BUNI HUB -</h1>
+                <p>Dar Es Salaam, Tanzania</p><br>
+                <h2>2014 - 2015</h2> <br>
+                
+                <h3>Responsibility:</h3><br>
+                <h4><i class="fa fa-check-circle"></i> Validate css</h4><br>
+                <h4><i class="fa fa-check-circle"></i> Project Management</h4>
+            </div>
+            <div class="card card-06"></div>
+            <!-- <div class="card card-07"></div>  -->
         </div>
     </div>
 
