--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
               
             </div>
             <div class="card card-05">
-                <h1>BUNI HUB -</h1>
+                <h1>PRIME POWER -</h1>
                 <p>Dar Es Salaam, Tanzania</p><br>
-                <h2>2014 - 2015</h2> <br>
+                <h2>2015 - 2016</h2> <br>
                 
                 <h3>Responsibility:</h3><br>
-                <h4><i class="fa fa-check-circle"></i> Validate css</h4><br>
-                <h4><i class="fa fa-check-circle"></i> Project Management</h4>
+                <h4><i class="fa fa-check-circle"></i> Network Installation & Configaration</h4><br>
+                <h4><i class="fa fa-check-circle"></i> RBS installation & configure OMT software</h4>
             </div>
             <div class="card card-06"></div>
             <!-- <div class="card card-07"></div>  -->
