--- a/index.html
+++ b/index.html
@@ -203,7 +203,15 @@
                 <h4><i class="fa fa-check-circle"></i> Network Installation & Configaration</h4><br>
                 <h4><i class="fa fa-check-circle"></i> RBS installation & configure OMT software</h4>
             </div>
-            <div class="card card-06"></div>
+            <div class="card card-06">
+                <h1>MWENGE SUNFLOWER OIL MILLS -</h1>
+                <p>Singida, Tanzania</p><br>
+                <h2>2017 - 2018</h2> <br>
+                
+                <h3>Responsibility:</h3><br>
+                <h4><i class="fa fa-check-circle"></i> IT officer</h4><br>
+                <h4><i class="fa fa-check-circle"></i> Project Management</h4>
+            </div>
             <!-- <div class="card card-07"></div>  -->
         </div>
     </div>
