--- a/index.html
+++ b/index.html
@@ -212,7 +212,15 @@
                 <h4><i class="fa fa-check-circle"></i> IT officer</h4><br>
                 <h4><i class="fa fa-check-circle"></i> Project Management</h4>
             </div>
-            <!-- <div class="card card-07"></div>  -->
+            <div class="card card-07">
+                <h1>IPF SOFTWARE -</h1>
+                <p>Dar Es Salaam, Tanzania</p><br>
+                <h2>2018 - 2019</h2> <br>
+                
+                <h3>Responsibility:</h3><br>
+                <h4><i class="fa fa-check-circle"></i> IT officer</h4><br>
+                <h4><i class="fa fa-check-circle"></i> Project Management</h4>
+            </div> 
         </div>
     </div>
 
