--- a/index.html
+++ b/index.html
@@ -218,8 +218,7 @@
                 <h2>2018 - 2019</h2> <br>
                 
                 <h3>Responsibility:</h3><br>
-                <h4><i class="fa fa-check-circle"></i> IT officer</h4><br>
-                <h4><i class="fa fa-check-circle"></i> Project Management</h4>
+                <h4><i class="fa fa-check-circle"></i> Front-End Developer</h4><br>
             </div> 
         </div>
     </div>
