--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Experience</a></li>
-                <li><a href="#">Work</a></li>
+                <li><a href="#">Project</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
