adding project details

--- a/index.html
+++ b/index.html
@@ -223,6 +223,22 @@
         </div>
     </div>
     <!-- Project -->
-    <div class="project"></div>
+    <div class="project">
+        <div class="project-slides">
+            <img src="" alt="">
+            <p>Project One</p>
+            <a href="#">Show</a>
+        </div>
+        <div class="project-slides">
+            <img src="" alt="">
+            <p>Project Two</p>
+            <a href="#">Show</a>
+        </div>
+        <div class="project-slides">
+            <img src="" alt="">
+            <p>Project Three</p>
+            <a href="#">Show</a>
+        </div>
+    </div>
 </body>
 </html>
