adding prev and next button

--- a/index.html
+++ b/index.html
@@ -239,6 +239,9 @@
             <p>Project Three</p>
             <a href="#">Show</a>
         </div>
+        
+        <a href="prev" onclick="plusSlides(-1)"><i class="fa fa-angle-left"></i></a>
+        <a href="prev" onclick="plusSlides(1)"><i class="fa fa-angle-right"></i></a>
     </div>
 </body>
 </html>
