adding dots buttons

--- a/index.html
+++ b/index.html
@@ -241,7 +241,13 @@
         </div>
         
         <a href="prev" onclick="plusSlides(-1)"><i class="fa fa-angle-left"></i></a>
-        <a href="prev" onclick="plusSlides(1)"><i class="fa fa-angle-right"></i></a>
+        <a href="next" onclick="plusSlides(1)"><i class="fa fa-angle-right"></i></a>
+    </div>
+
+    <div class="dot-container">
+        <span class="dot" onclick="currentSlides(1)"></span>
+        <span class="dot" onclick="currentSlides(2)"></span>
+        <span class="dot" onclick="currentSlides(3)"></span>
     </div>
 </body>
 </html>
