styling the prev and next button

--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
             <a href="#">Show</a>
         </div>
         
-        <a href="prev" onclick="plusSlides(-1)"><i class="fa fa-angle-left"></i></a>
-        <a href="next" onclick="plusSlides(1)"><i class="fa fa-angle-right"></i></a>
+        <a class="prev" href="#" onclick="plusSlides(-1)"><i class="fa fa-angle-left"></i></a>
+        <a class="next" href="#" onclick="plusSlides(1)"><i class="fa fa-angle-right"></i></a>
     </div>
 
     <div class="dot-container">
