--- a/index.html
+++ b/index.html
@@ -249,5 +249,7 @@
         <span class="dot" onclick="currentSlides(2)"></span>
         <span class="dot" onclick="currentSlides(3)"></span>
     </div>
+
+    <script src="/assets/js/app.js"></script>
 </body>
 </html>
