adding project section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Experience</a></li>
                 <li><a href="#">Project</a></li>
-                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Gallery</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
@@ -223,7 +223,35 @@
         </div>
     </div>
     <!-- Project -->
+    <div class="project">
+       
+        <div class="project01">
+            <div class="project01-image">
+                <img src="/assets/images/proj01.png" alt="proj01">
+            </div>
+            <div class="project01-text">
+                <h1>Portfolio</h1>
+            </div>
+        </div>
 
+        <div class="project02">
+            <div class="project02-image">
+                <img src="/assets/images/proj02.png" alt="proj02">
+            </div>
+            <div class="project02-text">
+                <h1>Self-Code</h1>
+            </div>
+        </div>
+
+        <div class="project03">
+            <div class="project03-image">
+                <img src="/assets/images/proj03.png" alt="proj03">
+            </div>
+            <div class="project03-text">
+                <h1>Music-room</h1>
+            </div>
+        </div>
+    </div>
 
     <script src="/assets/js/app.js"></script>
 </body>
