--- a/index.html
+++ b/index.html
@@ -227,16 +227,22 @@
        
         <div class="project01">
             <div class="project01-image">
-                <img src="/assets/images/proj01.png" alt="proj01">
+                <img src="/assets/images/proj01.png" width="95%"; height="350px" alt="proj01">
             </div>
             <div class="project01-text">
-                <h1>Portfolio</h1>
+                <h1>Self-Code</h1>
+                <h2>FRONT-END DEVELOPMENT</h2>
+                <p>Web application that will help coders to go and start doing the simple challenges in order to 
+                    improve their programming skills and get results if their correct or not. </p>
+                    <div class="project01-link">
+                        <a href="http://self-code.herokuapp.com/">View Details</a>
+                    </div>
             </div>
         </div>
-
+<!-- 
         <div class="project02">
             <div class="project02-image">
-                <img src="/assets/images/proj02.png" alt="proj02">
+                <img src="/assets/images/proj02.png" width="100%"; alt="proj02">
             </div>
             <div class="project02-text">
                 <h1>Self-Code</h1>
@@ -245,12 +251,12 @@
 
         <div class="project03">
             <div class="project03-image">
-                <img src="/assets/images/proj03.png" alt="proj03">
+                <img src="/assets/images/proj03.png" width="100%"; alt="proj03">
             </div>
             <div class="project03-text">
                 <h1>Music-room</h1>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <script src="/assets/js/app.js"></script>
