--- a/index.html
+++ b/index.html
@@ -253,15 +253,20 @@
                 </div>
             </div>
         </div>
-        <!-- 
+        
         <div class="project03">
             <div class="project03-image">
-                <img src="/assets/images/proj03.png" width="100%"; alt="proj03">
+                <img src="/assets/images/proj03.png" width="95%"; height="350px" alt="proj03">
             </div>
             <div class="project03-text">
                 <h1>Music-room</h1>
+                <h2>FRONT-END DEVELOPMENT</h2>
+                <p>This is my portfolio for all my details, skills, work experience and many more. </p>
+                <div class="project01-link">
+                    <a href="https://abuyako.netlify.com/">View Details</a>
+                </div>
             </div>
-        </div>  -->
+        </div>
     </div>
 
     <script src="/assets/js/app.js"></script>
