--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <h1>Portfolio</h1>
                 <h2>FRONT-END DEVELOPMENT</h2>
                 <p>This is my portfolio for all my details, skills, work experience and many more. </p>
-                <div class="project01-link">
+                <div class="project02-link">
                     <a href="https://abuyako.netlify.com/">View Details</a>
                 </div>
             </div>
@@ -256,14 +256,14 @@
         
         <div class="project03">
             <div class="project03-image">
-                <img src="/assets/images/proj03.png" width="95%"; height="350px" alt="proj03">
+                <img src="/assets/images/proj04.png" width="95%"; height="350px" alt="proj03">
             </div>
             <div class="project03-text">
                 <h1>Music-room</h1>
                 <h2>FRONT-END DEVELOPMENT</h2>
-                <p>This is my portfolio for all my details, skills, work experience and many more. </p>
-                <div class="project01-link">
-                    <a href="https://abuyako.netlify.com/">View Details</a>
+                <p>Music room Is the simple website (music platform) to get songs updates by downloading those songs in a cheap price.</p>
+                <div class="project03-link">
+                    <a href="https://music-room.netlify.com/">View Details</a>
                 </div>
             </div>
         </div>
