--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </div>
             <div class="project01-text">
                 <h1>Self-Code</h1>
-                <h2>FRONT-END DEVELOPMENT</h2>
+                <h2>DESIGN & DEVELOPMENT</h2>
                 <p>Web application that will help coders to go and start doing the simple challenges in order to
                     improve their programming skills and get results if their correct or not. </p>
                 <div class="project01-link">
@@ -246,7 +246,7 @@
             </div>
             <div class="project02-text">
                 <h1>Portfolio</h1>
-                <h2>FRONT-END DEVELOPMENT</h2>
+                <h2>DESIGN & DEVELOPMENT</h2>
                 <p>This is my portfolio for all my details, skills, work experience and many more. </p>
                 <div class="project02-link">
                     <a href="https://abuyako.netlify.com/">View Details</a>
@@ -260,7 +260,7 @@
             </div>
             <div class="project03-text">
                 <h1>Music-room</h1>
-                <h2>FRONT-END DEVELOPMENT</h2>
+                <h2>DESIGN & DEVELOPMENT</h2>
                 <p>Music room Is the simple website (music platform) to get songs updates by downloading those songs in a cheap price.</p>
                 <div class="project03-link">
                     <a href="https://music-room.netlify.com/">View Details</a>
