--- a/index.html
+++ b/index.html
@@ -253,20 +253,24 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="project03">
             <div class="project03-image">
-                <img src="/assets/images/proj04.png" width="95%"; height="350px" alt="proj03">
+                <img src="/assets/images/proj04.png" width="95%" ; height="350px" alt="proj03">
             </div>
             <div class="project03-text">
                 <h1>Music-room</h1>
                 <h2>DESIGN & DEVELOPMENT</h2>
-                <p>Music room Is the simple website (music platform) to get songs updates by downloading those songs in a cheap price.</p>
+                <p>Music room Is the simple website (music platform) to get songs updates by downloading those songs in
+                    a cheap price.</p>
                 <div class="project03-link">
                     <a href="https://music-room.netlify.com/">View Details</a>
                 </div>
             </div>
         </div>
+
+        <a class="prev" onclick="plusSlides(-1)">❮</a>
+        <a class="next" onclick="plusSlides(1)">❯</a>
     </div>
 
     <script src="/assets/js/app.js"></script>
