adding the project section and styling

--- a/index.html
+++ b/index.html
@@ -225,24 +225,24 @@
     <!-- Project -->
     <div class="project">
 
-        <div class="project01">
+        <div class="project01 mySlides">
             <div class="project01-image">
-                <img src="/assets/images/proj01.png" width="95%" ; height="350px" alt="proj01">
+                <img src="/assets/images/proj01.png" width="40%" ; height="300px" alt="proj01">
             </div>
             <div class="project01-text">
                 <h1>Self-Code</h1>
                 <h2>DESIGN & DEVELOPMENT</h2>
                 <p>Web application that will help coders to go and start doing the simple challenges in order to
-                    improve their programming skills and get results if their correct or not. </p>
+                    improve their programming skills. </p>
                 <div class="project01-link">
                     <a href="http://self-code.herokuapp.com/">View Details</a>
                 </div>
             </div>
         </div>
 
-        <div class="project02">
+        <div class="project02 mySlides">
             <div class="project02-image">
-                <img src="/assets/images/proj02.png" width="95%" ; height="350px" alt="proj02">
+                <img src="/assets/images/proj02.png" width="40%" ; height="300px" alt="proj02">
             </div>
             <div class="project02-text">
                 <h1>Portfolio</h1>
@@ -254,9 +254,9 @@
             </div>
         </div>
 
-        <div class="project03">
+        <div class="project03 mySlides">
             <div class="project03-image">
-                <img src="/assets/images/proj04.png" width="95%" ; height="350px" alt="proj03">
+                <img src="/assets/images/proj04.png" width="40%" ; height="300px" alt="proj03">
             </div>
             <div class="project03-text">
                 <h1>Music-room</h1>
@@ -272,6 +272,12 @@
         <a class="prev" onclick="plusSlides(-1)">❮</a>
         <a class="next" onclick="plusSlides(1)">❯</a>
     </div>
+
+    <div class="dot-container">
+        <span class="dot" onclick="currentSlide(1)"></span> 
+        <span class="dot" onclick="currentSlide(2)"></span> 
+        <span class="dot" onclick="currentSlide(3)"></span> 
+      </div>
 
     <script src="/assets/js/app.js"></script>
 </body>
