--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
         <a class="next" onclick="plusSlides(1)">❯</a>
     </div>
 
-    <div class="dot-container">
+    <!-- <div class="dot-container">
         <span class="dot" onclick="currentSlide(1)"></span> 
         <span class="dot" onclick="currentSlide(2)"></span> 
         <span class="dot" onclick="currentSlide(3)"></span> 
-      </div>
+      </div> -->
 
     <!-- Gallery   -->
     <h2>Automatic Slideshow</h2>
@@ -285,21 +285,21 @@
 
 <div class="slideshow-container">
 
-<div class="mySlides fade">
+<div class="mySlide fade">
   <div class="numbertext">1 / 3</div>
-  <img src="img_nature_wide.jpg" style="width:100%">
+  <img src="./assets/images/coder.jpg" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
-<div class="mySlides fade">
+<div class="mySlide fade">
   <div class="numbertext">2 / 3</div>
-  <img src="img_snow_wide.jpg" style="width:100%">
+  <img src="./assets/images/coding.svg" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
-<div class="mySlides fade">
+<div class="mySlide fade">
   <div class="numbertext">3 / 3</div>
-  <img src="img_mountains_wide.jpg" style="width:100%">
+  <img src="./assets/images/keyboard.jpg" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
