--- a/index.html
+++ b/index.html
@@ -273,33 +273,26 @@
         <a class="next" onclick="plusSlides(1)">❯</a>
     </div>
 
-    <!-- <div class="dot-container">
-        <span class="dot" onclick="currentSlide(1)"></span> 
-        <span class="dot" onclick="currentSlide(2)"></span> 
-        <span class="dot" onclick="currentSlide(3)"></span> 
-      </div> -->
+    
 
     <!-- Gallery   -->
-    <h2>Automatic Slideshow</h2>
-<p>Change image every 2 seconds:</p>
-
 <div class="slideshow-container">
 
 <div class="mySlide fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="./assets/images/coder.jpg" style="width:100%">
+  <!-- <div class="numbertext">1 / 3</div> -->
+  <img src="./assets/images/coder.jpg" style="width:80%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlide fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="./assets/images/coding.svg" style="width:100%">
+  <!-- <div class="numbertext">2 / 3</div> -->
+  <img src="./assets/images/coding.svg" style="width:80%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlide fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="./assets/images/keyboard.jpg" style="width:100%">
+  <!-- <div class="numbertext">3 / 3</div> -->
+  <img src="./assets/images/keyboard.jpg" style="width:80%">
   <div class="text">Caption Three</div>
 </div>
 
@@ -307,9 +300,9 @@
 <br>
 
 <div style="text-align:center">
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-  <span class="dot"></span> 
+  <span class="dotss"></span> 
+  <span class="dotss"></span> 
+  <span class="dotss"></span> 
 </div>
 
     <script src="/assets/js/app.js"></script>
