--- a/index.html
+++ b/index.html
@@ -305,8 +305,14 @@
   <span class="dotss"></span> 
 </div>
 
+<div class="contact">
+    <div class="contant-text"></div>
+    <div class="contact-hire"></div>
+</div>
+
+
     <script src="/assets/js/app.js"></script>
     <script src="/assets/js/gallery.js"></script>
 </body>
 
-</html>
+</html
