adding contact-text

--- a/index.html
+++ b/index.html
@@ -306,7 +306,9 @@
 </div>
 
 <div class="contact">
-    <div class="contant-text"></div>
+    <div class="contant-text">
+        <h1>All right reserved Abuyako &copy; 2020</h1>
+    </div>
     <div class="contact-hire"></div>
 </div>
 
