adding the contact-hire

--- a/index.html
+++ b/index.html
@@ -309,7 +309,9 @@
     <div class="contant-text">
         <h1>All right reserved Abuyako &copy; 2020</h1>
     </div>
-    <div class="contact-hire"></div>
+    <div class="contact-hire">
+        <a href="#">NEED A WEBSITE? PLEASE HIRE ME <i class="fa fa-paper-plane"></i></a>
+    </div>
 </div>
 
 
